@@ -86,6 +86,7 @@ A.F....... [ZBX-1357] updated Brazilian Portuguese, French and Russian translati
 .......PS. [ZBX-5920] added prefetching of 2 MB of data for Oracle sql selects (dimir)
 
 Bug fixes:
+..F....... [ZBX-6027] enabled frontend messaging for full screen pages (Toms)
 ..F....... [ZBX-6013] fixed table layout in Monitoring > IT services for IE10 (Toms)
 A......... [ZBX-5977] removed possibility to add an LLD rule to an application via the API in application and discovery rule (Oleg)
 ....I..... [ZBX-5938] removed orphaned trigger from default data set (Alexei)
